# iroh-webrtc-transport

./: .gitignore  BROWSER_WORKER_REMOVAL_PLAN.md  README.md
.github/workflows/: pages.yml
crates/iroh-webrtc-transport/: Cargo.toml  README.md
crates/iroh-webrtc-transport/examples/: native_facade.rs
crates/iroh-webrtc-transport/src/: browser.rs  browser_console_tracing.rs  browser_protocol.rs  browser_runtime.rs  browser_worker.rs  config.rs  core.rs  error.rs  lib.rs  native.rs  transport.rs
crates/iroh-webrtc-transport/src/browser/: capabilities.rs  facade.rs  js_boundary.rs  js_wire.rs  protocol.rs  registry.rs  rtc.rs  rtc_control_wire.rs  single_wasm_worker.rs  worker_bridge.rs  worker_bridge_wire.rs
crates/iroh-webrtc-transport/src/browser_protocol/: names.rs  transfers.rs
crates/iroh-webrtc-transport/src/browser_runtime/: direct.rs  error.rs  node.rs  protocol_registry.rs  rtc_lifecycle.rs  tests.rs  types.rs
crates/iroh-webrtc-transport/src/browser_worker/: error.rs  main_rtc.rs  node.rs  protocol_registry.rs  tests.rs  types.rs  wasm_bindings.rs
crates/iroh-webrtc-transport/src/core/: addr.rs  bootstrap.rs  coordinator.rs  endpoint.rs  frame.rs  hub.rs  sender.rs  signaling.rs
crates/iroh-webrtc-transport/tests/: iroh_noq_smoke.rs  native_facade.rs
examples/rust-browser-chat-room/: Cargo.toml  index.html
examples/rust-browser-chat-room/src/: lib.rs
examples/rust-browser-ping-pong/: Cargo.toml  index.html  plain-python-smoke.py  python_index.html  raw-rtc-baseline.html
examples/rust-browser-ping-pong/src/: lib.rs
(+66 files in other folders)
