[package]
name = "iroh-webrtc-rust-browser-ping-pong"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
iroh-webrtc-transport = { path = "../../crates/iroh-webrtc-transport", default-features = false, features = ["browser"] }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
tracing = "0.1"
wasm-bindgen = "=0.2.118"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "Event",
  "HtmlButtonElement",
  "HtmlInputElement",
  "HtmlPreElement",
  "Location",
  "Performance",
  "Window",
] }
